--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "moment-timezone": "^0.5.47",
     "next": "15.1.7",
     "openai": "^4.85.4",
     "react": "^19.0.0",
